1. 激活分享功能 2. 优化数据管理 3. 规范化 static 目录下的文件夹命名

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
             "DOM"
         ],
         "types": [
-            "@dcloudio/types"
+            "@dcloudio/types",
+            "vue"
         ],
         "importsNotUsedAsValues": "remove",
         "preserveValueImports": false
