--- a/package.json
+++ b/package.json
@@ -48,44 +48,45 @@
         "lint": "eslint ./src/**/*.{js,jsx,ts,tsx,d.ts,vue} --no-cache"
     },
     "dependencies": {
-        "@dcloudio/uni-app": "3.0.0-4020920240930001",
-        "@dcloudio/uni-app-harmony": "3.0.0-4020920240930001",
-        "@dcloudio/uni-app-plus": "3.0.0-4020920240930001",
-        "@dcloudio/uni-components": "3.0.0-4020920240930001",
-        "@dcloudio/uni-h5": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-alipay": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-baidu": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-jd": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-kuaishou": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-lark": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-qq": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-toutiao": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-weixin": "3.0.0-4020920240930001",
-        "@dcloudio/uni-mp-xhs": "3.0.0-4020920240930001",
-        "@dcloudio/uni-quickapp-webview": "3.0.0-4020920240930001",
+        "@dcloudio/uni-app": "3.0.0-4030620241128001",
+        "@dcloudio/uni-app-harmony": "3.0.0-4030620241128001",
+        "@dcloudio/uni-app-plus": "3.0.0-4030620241128001",
+        "@dcloudio/uni-components": "3.0.0-4030620241128001",
+        "@dcloudio/uni-h5": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-alipay": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-baidu": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-jd": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-kuaishou": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-lark": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-qq": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-toutiao": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-weixin": "3.0.0-4030620241128001",
+        "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
+        "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
         "@dcloudio/uni-ui": "^1.5.7",
-        "vue": "^3.4.21"
+        "vue": "^3.5.13",
+        "vue-i18n": "^9.14.2"
     },
     "devDependencies": {
-        "@dcloudio/types": "^3.4.8",
-        "@dcloudio/uni-automator": "3.0.0-4020920240930001",
-        "@dcloudio/uni-cli-shared": "3.0.0-4020920240930001",
-        "@dcloudio/uni-stacktracey": "3.0.0-4020920240930001",
-        "@dcloudio/vite-plugin-uni": "3.0.0-4020920240930001",
-        "@eslint/js": "^9.14.0",
+        "@dcloudio/types": "^3.4.14",
+        "@dcloudio/uni-automator": "3.0.0-4030620241128001",
+        "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
+        "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
+        "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
+        "@eslint/js": "^9.17.0",
         "@types/eslint__js": "^8.42.3",
-        "@typescript-eslint/parser": "^8.13.0",
-        "@vitejs/plugin-vue-jsx": "^4.0.1",
-        "@vue/runtime-core": "^3.4.21",
+        "@typescript-eslint/parser": "^8.18.2",
+        "@vitejs/plugin-vue-jsx": "^4.1.1",
+        "@vue/runtime-core": "^3.5.13",
         "@vue/tsconfig": "^0.1.3",
-        "eslint": "^9.14.0",
-        "eslint-plugin-vue": "^9.30.0",
-        "sass-embedded": "^1.80.6",
+        "eslint": "^9.17.0",
+        "eslint-plugin-vue": "^9.32.0",
+        "sass-embedded": "^1.83.0",
         "typescript": "^4.9.5",
-        "typescript-eslint": "^8.12.2",
-        "vite": "^5.4.10",
+        "typescript-eslint": "^8.18.2",
+        "vite": "^5.4.11",
         "vue-eslint-parser": "^9.4.3",
-        "vue-tsc": "^1.0.24"
+        "vue-tsc": "^1.8.27"
     },
     "engines": {
         "node": ">=16.0.0",
