--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,39 @@
 {
     "extends": "@vue/tsconfig/tsconfig.json",
     "compilerOptions": {
-        "sourceMap": true,
+        "target": "ESNext",
+        "jsx": "preserve",
+        "jsxImportSource": "vue",
+        "lib": ["ESNext", "DOM", "DOM.Iterable"],
+        "moduleDetection": "force",
         "baseUrl": "./",
+        "module": "ESNext",
+        "moduleResolution": "node",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         },
-        "lib": [
-            "ESNext",
-            "DOM"
-        ],
-        "types": [
-            "@dcloudio/types",
-            "vue"
-        ],
+        "resolveJsonModule": true,
+        "allowJs": true,
+        "strict": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "exactOptionalPropertyTypes": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "noUncheckedIndexedAccess": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "importsNotUsedAsValues": "remove",
-        "preserveValueImports": false
-    },
-    "include": [
-        "./src/**/*.ts",
-        "./src/**/*.tsx",
-        "./src/**/*.d.ts",
-        "./src/**/*.vue"
-    ]
+        "noEmit": true,
+        "outDir": "./dist",
+        "preserveValueImports": false,
+        "sourceMap": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "isolatedModules": true,
+        // "verbatimModuleSyntax": true,
+        "skipLibCheck": true
+    }
 }
