--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "algo-game",
     "type": "module",
-    "version": "2.0.0-beta.0",
+    "version": "1.0.2",
     "description": "An algorithm visualization and application project developed with UniApp.",
     "author": "Li Jiayong <1090194690@qq.com> (https://github.com/CarefreeYong)",
     "license": "MIT",
@@ -101,7 +101,6 @@
         "eslint": "^9.20.0",
         "eslint-plugin-format": "^0.1.3",
         "jiti": "^2.4.2",
-        "lint-staged": "^15.4.3",
         "sass-embedded": "^1.83.4",
         "simple-git-hooks": "^2.11.1",
         "typescript": "^4.9.5",
@@ -109,9 +108,6 @@
         "vue-tsc": "^1.8.27"
     },
     "simple-git-hooks": {
-        "pre-commit": "pnpm lint-staged && pnpm update-version"
-    },
-    "lint-staged": {
-        "*": "pnpm lint"
+        "pre-commit": "pnpm lint"
     }
 }
